bindings/c/xlpp_capi.h

// Opaque handle types
typedef struct xlpp_workbook_t*    xlpp_workbook;
typedef struct xlpp_worksheet_t*   xlpp_worksheet;
typedef struct xlpp_properties_t*  xlpp_properties;
// ============================================================
// Workbook
// ============================================================
XLPP_API xlpp_workbook  xlpp_workbook_create(void);
XLPP_API void           xlpp_workbook_destroy(xlpp_workbook wb);
XLPP_API xlpp_worksheet xlpp_workbook_add_sheet(xlpp_workbook wb, const char* name);
XLPP_API int            xlpp_workbook_sheet_count(xlpp_workbook wb);
XLPP_API xlpp_worksheet xlpp_workbook_get_sheet(xlpp_workbook wb, int index);
XLPP_API xlpp_worksheet xlpp_workbook_sheet_by_name(xlpp_workbook wb, const char* name);
XLPP_API int            xlpp_workbook_remove_sheet(xlpp_workbook wb, const char* name);
XLPP_API int  xlpp_workbook_load(xlpp_workbook wb, const char* path);
XLPP_API int  xlpp_workbook_save(xlpp_workbook wb, const char* path);
XLPP_API int  xlpp_workbook_date1904(xlpp_workbook wb);
XLPP_API void xlpp_workbook_set_date1904(xlpp_workbook wb, int enabled);
XLPP_API xlpp_properties xlpp_workbook_properties(xlpp_workbook wb);
// ============================================================
// Properties
// ============================================================
XLPP_API void xlpp_properties_set_title(xlpp_properties p, const char* v);
XLPP_API void xlpp_properties_set_creator(xlpp_properties p, const char* v);
XLPP_API void xlpp_properties_set_subject(xlpp_properties p, const char* v);
XLPP_API const char* xlpp_properties_get_title(xlpp_properties p);
XLPP_API const char* xlpp_properties_get_creator(xlpp_properties p);
XLPP_API const char* xlpp_properties_get_subject(xlpp_properties p);
XLPP_API void xlpp_properties_set_description(xlpp_properties p, const char* v);
XLPP_API const char* xlpp_properties_get_description(xlpp_properties p);
// ============================================================
// Utility
// ============================================================
XLPP_API const char*  xlpp_version(void);
XLPP_API const char*  xlpp_last_error(void);
XLPP_API void         xlpp_clear_error(void);